fix(signup): mobile signup form spacing

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -15,6 +15,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: opacity 0.3s ease-out;
 
   &:focus {
     outline: none;
