--- a/src/components/InfoSection/InfoSection.module.scss
+++ b/src/components/InfoSection/InfoSection.module.scss
@@ -42,9 +42,9 @@
 }
 
 .info__button {
-  background-color: var(--jl-violet);
+  background-color: var(--jl-orange-2);
   color: var(--jl-white);
-  box-shadow: 0 0.8rem 2rem var(--jl-violet-op25);
+  box-shadow: 0 0.8rem 2rem var(--jl-orange-2-op30);
   padding: 1.7rem 0;
   max-width: max(20rem, 100vw);
   width: 100%;
