--- a/src/components/InfoTile/InfoTile.module.scss
+++ b/src/components/InfoTile/InfoTile.module.scss
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5rem;
+  padding: 4rem 2rem;
   border-radius: 1.5rem;
   transition: background-color, box-shadow 0.3s ease-in-out;
 
